// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIComposition3> renders basic example 1`] = `
<div
  className="xui-composition xui-composition-3 xui-composition-is-finite"
>
  <div
    className="xui-gridarea-header"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-summary"
  >
    <div />
  </div>
</div>
`;

exports[`<XUIComposition3> should do nothing with children 1`] = `
<div
  className="xui-composition xui-composition-3 xui-composition-is-finite"
>
  <div
    className="xui-gridarea-header"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-summary"
  >
    <div />
  </div>
</div>
`;

exports[`<XUIComposition3> should include custom class and omit width-limiting class, if specified 1`] = `
<div
  className="xui-composition xui-composition-3 summary-with-head"
>
  <div
    className="xui-gridarea-header"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-summary"
  >
    <div />
  </div>
</div>
`;
